# phycoub

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CTestTestfile.cmake  DownloadEigen.cmake  IncludeDirectories.cmake  PlatformConfig.cmake  QtConfig.cmake  Tests.cmake  build_debug_exe.bat  build_libd.bat  clean_cmake.py  empp_throwback.py  extract_headers.py  generateCMakeDefault.sh  generateQMake.sh  phycoub  phycoub.qmake  phycoub.widgets.qmake
calculationmodels/: CMakeLists.txt  CalculationModel.cpp  CalculationModel.h  HighSpeedModificationVerle.cpp  HighSpeedModificationVerle.h  LeapFrog.cpp  LeapFrog.h
common/: CMakeLists.txt  Constants.h  ContainParticleGroupIface.h  ContainParticleGroupList.cpp  ContainParticleGroupList.h  HasId.cpp  HasId.h  UseLog.cpp  UseLog.h  Utils.h
examples/: CMakeLists.txt  IncludeDirectories.cmake  Libraries.cmake
examples/electroninhomogeneousfields/: CMakeLists.txt  ElectronInHomogeneousFieldsController.cpp  electroninhomogeneousfields
examples/magnetron/: CMakeLists.txt  MagnetronController.cpp  MainWindow.cpp  magnetron  main.cpp
examples/wilsoncloudchamber/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  ScalarControllerAdapters.h  WidgetConfigurationUtils.cpp  WidgetConfigurationUtils.h  wilsoncloudchamber
interworkingfunctions/: CMakeLists.txt  CulonInterworking.cpp  CulonInterworking.h  InterworkingFunction.cpp  InterworkingFunction.h  InterworkingIface.h  LDInterworking.cpp  LDInterworking.h  MagneticInterworking.cpp
lifetimecontrollers/: BornPeriodLifeTimeController.cpp  BornPeriodLifeTimeController.h  CMakeLists.txt  LifeTimeControllerBase.h  LifeTimeControllerIface.h  QuantityLifeTimeController.cpp  QuantityLifeTimeController.h  RemoveParticleIfBorderReachedBase.cpp
magnetron/: CMakeLists.txt  MainWindow.h  ScalarControllerAdapters.h  readme.md
particlesources/: CMakeLists.txt  ConeParticleSource.cpp  ConeParticleSource.h  CylindricalParticleSource.cpp  CylindricalParticleSource.h  CylindricalXYParticleSource.cpp  CylindricalXYParticleSource.h  ParticleSourceBase.cpp  ParticleSourceBase.h  ParticleSourceIface.h
phycoub/: CMakeLists.txt  ConfigGtest.cmake  DownloadEigen.cmake  Readme.md  Tests.cmake  clean.bat  phycoub.qmake
phycoub/benchmark/: CMakeLists.txt
phycoub/borderconditions/: CMakeLists.txt  CyclicBorder.cpp  CyclicBorder.h  CylinderBorderCondition.cpp  ElasticCoubCondition.cpp  ThermostatBorder.h
phycoub/borderevents/: BorderReachedEventGenerator.h  BorderReachedObserver.h  CMakeLists.txt
phycoub/borderfieldconditions/: BorderFieldCondition.cpp  BorderFieldCondition.h  CMakeLists.txt  CyclicBoundedField.cpp  CyclicBoundedField.h
phycoub/calculationmodels/: CMakeLists.txt  HighSpeedModificationVerle.h  LeapFrog.h
phycoub/common/: CMakeLists.txt  UseLog.h
phycoub/errors/: CMakeLists.txt  ErrorDescription.h  MathExceptions.h
phycoub/examples/: ArCoub.cpp  ArCoub.h  CMakeLists.txt  ElectronInHomogeneousFieldsCoub.cpp  FigureDemonstration.h  NOCoub.cpp  WilsonCloudChamber.cpp
phycoub/fieldfunctions/: CMakeLists.txt  DirectHomogeneousField.cpp  ElectricField.cpp  ElectricHomogeneousRadialXYField.cpp  HomogeneousFieldIface.h  LDField.cpp  RadialHomogeneousField.cpp  RadialHomogeneousField.h
phycoub/interworkingfunctions/: CMakeLists.txt  CulonInterworking.cpp  InterworkingIface.h  LDInterworking.h  MagneticInterworking.h
phycoub/lifetimecontrollers/: BornPeriodLifeTimeController.cpp  BornPeriodLifeTimeController.h  CMakeLists.txt  LifeTimeControllerBase.cpp  QuantityLifeTimeController.cpp  RemoveParticleIfBorderReachedBase.h
phycoub/logging/: CMakeLists.txt  Log.cpp  StdErrLogObserver.cpp  StdErrLogObserver.h
phycoub/mathematic/: CMakeLists.txt  DownloadEigen.cmake  LinearAlgebraEquationUtils.cpp  LinearAlgebraEquationUtils.h  Matrix.cpp  Matrix.h  PlaneEquation.h  RandomUtils.cpp  RandomUtils.h  RotationMatrix.cpp  RotationMatrix.h  StraightLineEquation.h  Vector.cpp  Vector.h  VectorUtils.cpp  VectorUtils.h
phycoub/multithreading/: CMakeLists.txt  SpinLock.cpp  SpinLock.h  ThreadPool.cpp  ThreadPool.h
phycoub/particle/: CMakeLists.txt  ContainOneParticleGroup.cpp  ContainOneParticleGroup.h  Particle.h  ParticleGroup.h  ParticleGroupList.h  ParticleOptions.h  ParticleOptionsCatalog.cpp
phycoub/particlesources/: CMakeLists.txt  ConeParticleSource.cpp  ConeParticleSource.h  CylindricalXYParticleSource.cpp  CylindricalXYParticleSource.h  ParticleSourceIface.h
phycoub/phycoubs/: ElectronInHomogeneousFieldsCoub.h  WilsonCloudChamber.cpp
phycoub/phymeasurement/: CMakeLists.txt  MeasurementUtils.cpp  MeasurementUtils.h
phycoub/phyobjects/: CMakeLists.txt  PhyCoub.cpp
phycoub/shapes/: CMakeLists.txt  CylindricShape.cpp  CylindricShape.h
phycoub/tests/: CMakeLists.txt
phycoubs/: ArCoub.cpp  ArCoub.h  CMakeLists.txt  ElectronInHomogeneousFieldsCoub.cpp  ElectronInHomogeneousFieldsCoub.h  ElectronsInElasticCoub.cpp  ElectronsInElasticCoub.h  FigureDemonstration.cpp  FigureDemonstration.h  Magnetron.cpp  Magnetron.h  NOCoub.cpp  NOCoub.h  PhyCoub.cpp  PhyCoub.h  WilsonCloudChamber.cpp  WilsonCloudChamber.h
phyelectroninhomogeneousfields/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ScalarControllerAdapters.h  electroninhomogeneousfields  phyelectroninhomogeneousfields.pro
phywidgets/: CMakeLists.txt  generateQMake.sh  phywidgets.qmake  widgets-specific.qmake
phywidgets/phyaddparticle/: CMakeLists.txt  PhyAddParticlePhyCoubSubscriber.cpp  PhyAddParticlePhyCoubSubscriber.h  PhyAddParticleWidget.cpp  phyaddparticle.pro
phywidgets/phycommon/: AddParticleControllerAdapterIface.h  CMakeLists.txt  GLRotationController.cpp  GetParticlesAdapterIface.h  PhyCoubController.cpp  PhyCoubController.h  PhyCoubControllerSubscriberIface.h  phycommon.pro
phywidgets/phycoubcontroller/: CMakeLists.txt  PhyCoubControllerSubscriber.h  PhyCoubControllerWidget.cpp  phycoubcontroller.pro
phywidgets/phycoubglwidget/: CMakeLists.txt  (+4 more)
phywilsoncloudchamber/: CMakeLists.txt  WilsonCloudChamberController.cpp  phywilsoncloudchamber.pro  readme.md
widgets/: CMakeLists.txt  readme.md
(+300 files in other folders)
